--- a/plone/app/locales/locales/zh_CN/LC_MESSAGES/atreferencebrowserwidget.po
+++ b/plone/app/locales/locales/zh_CN/LC_MESSAGES/atreferencebrowserwidget.po
@@ -5,25 +5,27 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ATReferenceBrowserWidget\n"
 "POT-Creation-Date: 2015-09-20 20:59+0000\n"
-"PO-Revision-Date: 2013-06-08 22:33+0800\n"
+"PO-Revision-Date: 2016-01-11 20:54+0800\n"
 "Last-Translator: Jian Aijun <jianaijun@gmail.com>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "Language-Code: zh-cn\n"
 "Language-Name: 简体中文\n"
 "Preferred-Encodings: utf-8\n"
 "Domain: atreferencebrowserwidget\n"
+"Language: zh_CN\n"
+"X-Generator: Poedit 1.8.6\n"
 
 #: archetypes/referencebrowserwidget/skins/referencebrowser/referencebrowser.pt:178
 msgid "Move down"
-msgstr ""
+msgstr "下移"
 
 #: archetypes/referencebrowserwidget/skins/referencebrowser/referencebrowser.pt:176
 msgid "Move up"
-msgstr ""
+msgstr "上移"
 
 #. Default: "Add..."
 #: archetypes/referencebrowserwidget/skins/referencebrowser/referencebrowser.pt:190
@@ -83,10 +85,9 @@ msgstr "已删除"
 #. Default: "Full-text search is disabled: searching for 'budget' will only return elements containing exact term 'budget'. You can enable full-text search by appending a '*' at the end of a word. For example, searching for 'budget*' will also return elements containing 'budgetary'."
 #: archetypes/referencebrowserwidget/browser/view.py:287
 msgid "wild_card_search_disabled_help"
-msgstr ""
+msgstr "不完全搜索帮助"
 
 #. Default: "Full-text search is enabled: searching for 'budget' will also return elements containing 'budgetary'. If you want to search exact match, add quotation marks around the word: \"budget\"."
 #: archetypes/referencebrowserwidget/browser/view.py:282
 msgid "wild_card_search_enabled_help"
-msgstr ""
-
+msgstr "使能搜索帮助"
