--- a/plone/app/locales/locales/zh_CN/LC_MESSAGES/passwordresettool.po
+++ b/plone/app/locales/locales/zh_CN/LC_MESSAGES/passwordresettool.po
@@ -3,17 +3,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PasswortResetTool\n"
 "POT-Creation-Date: 2015-09-20 20:59+0000\n"
-"PO-Revision-Date: 2013-01-12 21:03+0800\n"
+"PO-Revision-Date: 2016-01-12 17:16+0800\n"
 "Last-Translator: Jian Aijun <jianaijun@gmail.com>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "Language-Code: zh-cn\n"
 "Language-Name: 简体中文\n"
 "Preferred-Encodings: utf-8\n"
 "Domain: passwordresettool\n"
+"Language: zh_CN\n"
+"X-Generator: Poedit 1.8.6\n"
 
 #. Default: "Set my password"
 #: PasswordResetTool/skins/PasswordReset/pwreset_form.cpt:110
@@ -176,4 +178,3 @@ msgstr "您的密码已经设置成功。您现在可以使用您的新密码登
 #: PasswordResetTool/skins/PasswordReset/pwreset_expired.pt:18
 msgid "message_request_new"
 msgstr "请求一个新的"
-
