--- a/plone/app/locales/locales/zh_CN/LC_MESSAGES/plonefrontpage.po
+++ b/plone/app/locales/locales/zh_CN/LC_MESSAGES/plonefrontpage.po
@@ -4,21 +4,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plone\n"
 "POT-Creation-Date: 2007-05-01 17:30+0000\n"
-"PO-Revision-Date: 2013-03-01 06:18+0800\n"
+"PO-Revision-Date: 2016-01-12 17:17+0800\n"
 "Last-Translator: Jian Aijun <jianaijun@gmail.com>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"Language: zh_CN\n"
+"X-Generator: Poedit 1.8.6\n"
 
 #. Default: "Welcome to Plone"
 msgid "front-title"
-msgstr "欢迎使用 Plone 系统"
+msgstr "欢迎使用 P 系统"
 
 #. Default: "Congratulations! You have successfully installed Plone."
 msgid "front-description"
-msgstr "恭喜! 您已成功安装了 Plone 系统。"
+msgstr "恭喜! 您已成功安装了 P 系统。"
 
 #. Default: ""
 #. "<p class='discreet'>"
@@ -143,127 +145,36 @@ msgstr "恭喜! 您已成功安装了 Plone 系统。"
 #. "<p>&mdash;The Plone Team</p>"
 msgid "front-text"
 msgstr ""
-"<p class='discreet'>"
-"如果您看到的网站并不是您所期望的，"
-"这表示此网站的所有者，刚刚安装了 Plone 系统。"
-"请不要联系 Plone 团队 或 Plone 邮件列表。"
-"</p>"
-""
-"<h2>新手上路</h2>"
-""
-"<p>"
-"在您开始探索新创建的 Plone 站点之前，请先完成以下步骤："
-"</p>"
-""
-"<ol>"
-"    <li>确认您以管理员身份登录。"
-"        <span class='discreet'>（您应该看到在右上角的网站设置链接）</span></li>"
-"    <li><a href='@@mail-controlpanel'>设置邮件服务器</a>。 <span class='discreet'>（Plone 需要一个有效的 SMTP 服务器来验证用户和发送密码提醒）</span></li>"
-"    <li><a href='@@security-controlpanel'>决定您的网站的安全性级别</a>。 <span class='discreet'>（启用自行注册，密码策略，等）</span></li>"
-"</ol>"
-""
-"<h2>继续探索</h2>"
-""
-"<p>接下来，建议您完成以下的步骤：</p>"
-""
-"<ul>"
-"    <li>查看 <a class='link-plain' href='http://plone.com/features/'>Plone 的新功能</a>。</li>"
-"    <li>阅读 <a class='link-plain' href='http://docs.plone.org'>文档</a>，特别是"
-"        <a class='link-plain' href='http://plone.org/documentation/manual/plone-4-user-manual'>内容编辑者文档</a>"
-"        以及"
-"        <a class='link-plain' href='http://plone.org/documentation/faq/server-recommendations'>服务器设置建议</a>。"
-"    </li>"
-"    <li>浏览 <a class='link-plain' href='http://plone.org/products'>可用的附加组件</a>。</li>"
-"    <li>阅读 或 订阅 <a class='link-plain' href='http://plone.org/support'>帮助与支持</a>。</li>"
-"</ul>"
-""
-"<h2>设置定制</h2>"
-""
-"<p>Plone 有很多的设置选项，可以根据您的需要进行调整。一些例子：</p>"
-""
-"<ul>"
-"    <li>"
-"    尝试不同的主题，可以从"
-"    <a href='@@theming-controlpanel'>已安装的主题</a> 中选择，或者从"
-"    <a class='link-plain'"
-"       href='http://plone.org/products/'>plone.org 可用主题</a>"
-"       获取。 <span class='discreet'>（请确保主题"
-"       与您当前正在使用的 Plone 版本兼容）</span>"
-"    </li>"
-""
-"    <li>"
-"    <a href='@@content-controlpanel'>"
-"    决定您的网站的发布流程</a>。"
-"    <span class='discreet'>（默认是"
-"    以网站为中心的工作流程，如果您想使用 Plone 作为一个封闭的企业内部网，"
-"    您应该相应地调整工作流程的设置）</span>"
-"    </li>"
-""
-"    <li>"
-"    默认情况下，Plone 内容使用可视化编辑器。"
-"    <span class='discreet'>（如果您喜欢基于文本的语法和/或 wiki"
-"        语法, 您可以在"
-"    <a href='@@markup-controlpanel'>标记设置</a> 对此进行更改）</span>"
-"    </li>"
-""
-"    <li>...在"
-"        <a href='@@overview-controlpanel'>网站设置</a> 还更多的设置项。"
-"    </li>"
-""
-"</ul>"
-""
-"<h2>使用分享</h2>"
-""
-"<p>"
-"您正在使用 Plone 做一些有趣的东西吗？"
-"像部署大型的网站，或吸引人的使用案例？"
-"您的公司，提供基于 Plone 的解决方案吗？"
-"</p>"
-""
-"<ul>"
-"    <li>添加您的网站到 <a class='link-plain'"
-"        href='http://plone.org/support/sites'>Plone 网站列表</a>。"
-"        <span class='discreet'>（或者查看已有的网站列表！）</span>"
-"    </li>"
-"    <li>添加您的公司到 <a class='link-plain'"
-"        href='http://plone.com/providers'>Plone 解决方案提供者</a>。</li>"
-"    <li>添加 <a class='link-plain'"
-"        href='http://plone.com/success-stories'>使用案例</a> 描述您"
-"        部署的项目和客户。</li>"
-"</ul>"
-""
-"<h2>了解架构</h2>"
-""
-"<p>"
-"Plone 基于 Zope 应用程序服务器，并使用 Python 编程语言。"
-"关于这些技术的更多资料，请参考："
-"</p>"
-""
-"<ul>"
-"<li><a class='link-plain' href='http://plone.org'>Plone "
-"    内容管理系统</a> 网站。</li>"
-"<li><a class='link-plain' href='http://zope2.zope.org'>Zope"
-"    应用服务器</a> 网站。</li>"
-"<li><a class='link-plain' href='http://www.python.org'>Python"
-"    编程语言</a> 网站。</li>"
-"</ul>"
-""
-"<h2>捐赠 Plone 基金会</h2>"
-""
-"<p>"
-"Plone 系统是由数以千计的个人和数以百计的公司共同努力的成果。"
-"Plone 基金会的角色："
-"</p>"
-"<ul>"
-"    <li>...保护和推广 Plone。</li>"
-"    <li>...是依据美国国内税收法第501(c)(3)条款规定注册的非营利组织。</li>"
-"    <li>...捐赠是免税的。</li>"
-"    <li><a href='http://plone.org/foundation/foundation-donations'>真诚希望您支持它！</a></li>"
-"</ul>"
-""
-"<p>感谢您使用我们的产品，希望您会喜欢它！</p>"
-""
-"<p>&mdash;Plone 团队 敬上</p>"
+"<p class='discreet'>如果您看到的网站并不是您所期望的，这表示此网站的所有者，刚刚安装了 P 系统。请不要联系 P 团队 或 P 邮件"
+"列表。</p><h2>新手上路</h2><p>在您开始探索新创建的 P 站点之前，请先完成以下步骤：</p><ol>    <li>确认您以管理员身份登"
+"录。        <span class='discreet'>（您应该看到在右上角的网站设置链接）</span></li>    <li><a href='@@mail-controlpanel'>"
+"设置邮件服务器</a>。 <span class='discreet'>（P 需要一个有效的 SMTP 服务器来验证用户和发送密码提醒）</span></li>    "
+"<li><a href='@@security-controlpanel'>决定您的网站的安全性级别</a>。 <span class='discreet'>（启用自行注册，密码策略，等）"
+"</span></li></ol><h2>继续探索</h2><p>接下来，建议您完成以下的步骤：</p><ul>    <li>查看 <a class='link-plain' "
+"href='http://plone.com/features/'>P 的新功能</a>。</li>    <li>阅读 <a class='link-plain' href='http://docs.plone.org'>文"
+"档</a>，特别是        <a class='link-plain' href='http://plone.org/documentation/manual/plone-4-user-manual'>内容编辑者文"
+"档</a>        以及        <a class='link-plain' href='http://plone.org/documentation/faq/server-recommendations'>服务器设"
+"置建议</a>。    </li>    <li>浏览 <a class='link-plain' href='http://plone.org/products'>可用的附加组件</a>。</li>    <li>"
+"阅读 或 订阅 <a class='link-plain' href='http://plone.org/support'>帮助与支持</a>。</li></ul><h2>设置定制</h2><p>P 有很多"
+"的设置选项，可以根据您的需要进行调整。一些例子：</p><ul>    <li>    尝试不同的主题，可以从    <a href='@@theming-"
+"controlpanel'>已安装的主题</a> 中选择，或者从    <a class='link-plain'       href='http://plone.org/products/'>plone.org "
+"可用主题</a>       获取。 <span class='discreet'>（请确保主题       与您当前正在使用的 P 版本兼容）</span>    </li>    "
+"<li>    <a href='@@content-controlpanel'>    决定您的网站的发布流程</a>。    <span class='discreet'>（默认是    以网站为中"
+"心的工作流程，如果您想使用 P 作为一个封闭的企业内部网，    您应该相应地调整工作流程的设置）</span>    </li>    <li>    默"
+"认情况下，P 内容使用可视化编辑器。    <span class='discreet'>（如果您喜欢基于文本的语法和/或 wiki        语法, 您可以"
+"在    <a href='@@markup-controlpanel'>标记设置</a> 对此进行更改）</span>    </li>    <li>...在        <a href='@@overview-"
+"controlpanel'>网站设置</a> 还更多的设置项。    </li></ul><h2>使用分享</h2><p>您正在使用 P 做一些有趣的东西吗？像部署大型的"
+"网站，或吸引人的使用案例？您的公司，提供基于 P 的解决方案吗？</p><ul>    <li>添加您的网站到 <a class='link-plain'        "
+"href='http://plone.org/support/sites'>P 网站列表</a>。        <span class='discreet'>（或者查看已有的网站列表！）</"
+"span>    </li>    <li>添加您的公司到 <a class='link-plain'        href='http://plone.com/providers'>P 解决方案提供者</a>。"
+"</li>    <li>添加 <a class='link-plain'        href='http://plone.com/success-stories'>使用案例</a> 描述您        部署的项"
+"目和客户。</li></ul><h2>了解架构</h2><p>P 基于 Zope 应用程序服务器，并使用 Python 编程语言。关于这些技术的更多资料，请参"
+"考：</p><ul><li><a class='link-plain' href='http://plone.org'>P     内容管理系统</a> 网站。</li><li><a class='link-plain' "
+"href='http://zope2.zope.org'>Zope    应用服务器</a> 网站。</li><li><a class='link-plain' href='http://www.python."
+"org'>Python    编程语言</a> 网站。</li></ul><h2>捐赠 P 基金会</h2><p>P 系统是由数以千计的个人和数以百计的公司共同努力的成"
+"果。P 基金会的角色：</p><ul>    <li>...保护和推广 P。</li>    <li>...是依据美国国内税收法第501(c)(3)条款规定注册的非营利组"
+"织。</li>    <li>...捐赠是免税的。</li>    <li><a href='http://plone.org/foundation/foundation-donations'>真诚希望您支持"
+"它！</a></li></ul><p>感谢您使用我们的产品，希望您会喜欢它！</p><p>&mdash;P 团队 敬上</p>"
 
 #. Default: "News"
 msgid "news-title"
@@ -296,4 +207,3 @@ msgstr "用户"
 #. Default: "Container for portal users' home directories"
 msgid "members-description"
 msgstr "网站用户"
-
